--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^2.13.10",
+    "fetch-jsonp": "^1.1.3",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
